--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem mim ser?</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 class="titulo">Minha história</h1>
+    <section>
+        <h1 class="titulo">Minha história</h1>
+        <div class="texto">
+            <p>Me chamo Gustavo Vinicius Blazius, meu nome foi escolhido pela minha mãe, e herdei meu sobrenome do meu pai, sendo de origem alemã. Minha mãe é descendente de alemã, com a família do meu avô materno vindo da alemanha para joinville após a segunda guerra. Enquanto meu pai é descendente de alemão e polonês, com a vinda deles para o Brasil antes das grandes guerras.</p>
+            <p>Nasci na cidade de Joinville, localizada em Santa Catarina, no dia 4 de setembro de 2008, tendo duas irmãs mais velhas também nascidas em joinville. Durante a infância tive vários amigos, com quem eu gostava de andar de bicicleta e jogar futebol com eles. Fui sempre uma criança calma e esperta, tendo uma habilidade especial com desenhos, sempre me inspirando em carros que eu via na rua e que gostava muito. Com 11 anos me mudei para o Paraná, porque meu pai queria voltar para a sua terra natal, criando assim uma "segunda parte" na minha vida, em que me adaptei em um lugar com costumes, sotaques e amizades diferentes.</p>
+        </div>
+    </section>
+    
 </body>
 </html>
