--- a/index.html
+++ b/index.html
@@ -14,9 +14,20 @@
         <h1 class="titulo">Minha história</h1>
         <div class="texto">
             <p>Me chamo Gustavo Vinicius Blazius, meu nome foi escolhido pela minha mãe, e herdei meu sobrenome do meu pai, sendo de origem alemã. Minha mãe é descendente de alemã, com a família do meu avô materno vindo da alemanha para joinville após a segunda guerra. Enquanto meu pai é descendente de alemão e polonês, com a vinda deles para o Brasil antes das grandes guerras.</p>
-            <p>Nasci na cidade de Joinville, localizada em Santa Catarina, no dia 4 de setembro de 2008, tendo duas irmãs mais velhas também nascidas em joinville. Durante a infância tive vários amigos, com quem eu gostava de andar de bicicleta e jogar futebol com eles. Fui sempre uma criança calma e esperta, tendo uma habilidade especial com desenhos, sempre me inspirando em carros que eu via na rua e que gostava muito. Com 11 anos me mudei para o Paraná, porque meu pai queria voltar para a sua terra natal, criando assim uma "segunda parte" na minha vida, em que me adaptei em um lugar com costumes, sotaques e amizades diferentes.</p>
+            <p>Nasci na cidade de Joinville, localizada em Santa Catarina, no dia 4 de setembro de 2008, tendo duas irmãs mais velhas também nascidas em joinville. Durante a infância tive vários amigos, com quem eu gostava de andar de bicicleta e jogar futebol com eles. Fui sempre uma criança calma e esperta, tendo uma habilidade especial com desenhos, sempre me inspirando em carros que eu via na rua e que gostava muito. Com 11 anos me mudei para o Paraná porque meu pai queria voltar para a sua terra natal, criando assim uma "segunda parte" na minha vida, em que me adaptei em um lugar com costumes, sotaques e amizades diferentes.</p>
         </div>
     </section>
-    
+    <section>
+        <h1 class="titulo2">Meus gostos</h1>
+        <div class="texto2">
+            <p>Sempre gostei muito de assistir à esportes, especialmente futebol. Mais ou menos em 2014 decidi começar a acompanhar futebol de maneira mais seria, escolhendo o Palmeiras para torcer, acompanhando os títulos e jogadores posteriores. Também acompanho alguns outros esportes, porém de maneira mais "superficial", como a formula 1 e MMA.</p>
+        </div>
+    </section>
+    <section>
+        <h1 class="titulo3">Meu futuro</h1>
+        <div class="texto3">
+            <p>Para o meu futuro, quero investir meu dinheiro em diversas fontes de renda, com renda fixa e variável. Se a política brasileira não for "justa", planejo sair do Brasil quando possível, e após me estabilizar em um lugar que eu gostar, buscar estabilidade. Em um aspecto geral, quero ter uma vida satisfatória, saudável e de sucesso.</p>
+        </div>
+    </section>
 </body>
 </html>
