--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h1 class="titulo3">Meu futuro</h1>
         <div class="texto3">
             <p>Para o meu futuro, quero investir meu dinheiro em diversas fontes de renda, com renda fixa e variável. Se a política brasileira não for "justa", planejo sair do Brasil quando possível, e após me estabilizar em um lugar que eu gostar, buscar estabilidade. Em um aspecto geral, quero ter uma vida satisfatória, saudável e de sucesso.</p>
+            <img src="f76fc662b0e16b695a4806970045427f.jpg" alt="">
         </div>
     </section>
 </body>
